# app/Models/Task.php
@@ -18,6 +18,11 @@ class Task extends Model
         'is_completed',
     ];
 
+    protected $casts = [
+        'created_at' => 'datetime:Y-m-d H:i:s',
+        'updated_at' => 'datetime:Y-m-d H:i:s',
+    ];
+
     public function user(): BelongsTo
     {
         return $this->belongsTo(User::class);
@@ -26,7 +31,6 @@ class Task extends Model
     public function toSearchableArray(): array
     {
         return [
-            'id' => $this->id,
             'title' => $this->title,
             'description' => $this->description,
         ];
